# wasi-sql

./: LICENSE  README.md  build.py
rust/: Cargo.toml
rust/wasi_sql/: Cargo.toml
rust/wasi_sql/examples/: sqlite.rs
rust/wasi_sql/src/: bindings.rs  lib.rs
rust/wasi_sql_wasmtime/: Cargo.toml
rust/wasi_sql_wasmtime/examples/: sqlite.rs
rust/wasi_sql_wasmtime/src/: bindings.rs  lib.rs  sqlite.rs  util.rs
schema/: sql_v1_alpha1.wit
